# rarian

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  cacher.rs  config.rs  main.rs  notes.rs
src/app/: app.rs  insert_note.rs  mod.rs  tui.rs
src/gatherer/: app_gatherer.rs  file_gatherer.rs  file_watcher.rs  logger.rs  mod.rs  test_utils.rs
src/setup/: config.toml  powershellSetup.ps1
