[package]
description = "Manage and link notes, work and collaboration"
name = "rarian"
version = "0.1.7"
edition = "2021"
authors = ["giladh"]
repository = "https://github.com/gthecht/rarian"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
active-win-pos-rs = "0.8.3"
anyhow = "1.0.80"
directories = "5.0.1"
itertools = "0.12.1"
notify = { version = "5.0.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sysinfo = "0.27.7"
ratatui = "0.27.0"
ulid = { version = "1.1.3", features = ["serde"] }
clap = { version = "4.5.13", features = ["derive"] }
